Cards Head Input Screen

--- a/app/src/main/res/layout/fragment_final__head__player1and2__screen.xml
+++ b/app/src/main/res/layout/fragment_final__head__player1and2__screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Leader_Head_Screen">
+    tools:context=".Final_Head_Player1and2_Screen">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,7 +27,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Enter Your Head 1 and 13" />
+                android:text="Enter Your Team Head 1 and 13" />
 
             <EditText
                 android:id="@+id/inputField"
@@ -54,17 +54,5 @@
 
         </LinearLayout>
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/closeButton"
-            android:layout_width="40dp"
-            android:layout_height="30dp"
-            android:padding="3dp"
-            android:text="X"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
