--- a/app/src/main/res/layout/fragment_player3_.xml
+++ b/app/src/main/res/layout/fragment_player3_.xml
@@ -15,7 +15,7 @@
         <FrameLayout
             android:id="@+id/frameLayout"
             android:layout_width="515dp"
-            android:layout_height="110dp"
+            android:layout_height="130dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,105 +24,105 @@
 
             <ImageView
                 android:id="@+id/imageView7"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
+                android:layout_width="60dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="10dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
                 android:id="@+id/imageView8"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
+                android:layout_width="60dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="45dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
                 android:id="@+id/imageView6"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
+                android:layout_width="60dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="80dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
                 android:id="@+id/imageView4"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
+                android:layout_width="60dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="115dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
                 android:id="@+id/imageView5"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
+                android:layout_width="60dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="150dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
                 android:id="@+id/imageView9"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
+                android:layout_width="60dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="185dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
                 android:id="@+id/imageView10"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
+                android:layout_width="60dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="220dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
                 android:id="@+id/imageView11"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
+                android:layout_width="60dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="255dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
                 android:id="@+id/imageView12"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
+                android:layout_width="60dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="290dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
                 android:id="@+id/imageView13"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
+                android:layout_width="60dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="325dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
                 android:id="@+id/imageView14"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
+                android:layout_width="60dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="360dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
                 android:id="@+id/imageView15"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
+                android:layout_width="60dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="395dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
                 android:id="@+id/imageView16"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
+                android:layout_width="60dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="430dp"
                 android:src="@drawable/card_back" />
         </FrameLayout>
@@ -302,6 +302,33 @@
             app:layout_constraintStart_toEndOf="@+id/imageView17"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.04000002" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Blue:"
+            android:textColor="#6495ED"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/imageView17"
+            app:layout_constraintHorizontal_bias="0.289"
+            app:layout_constraintStart_toEndOf="@+id/textView5"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="163dp"
+            android:layout_marginTop="16dp"
+            android:text=" Red:"
+            android:textColor="#FF0000"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/imageView17"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
