--- a/app/src/main/res/layout/fragment_player2_.xml
+++ b/app/src/main/res/layout/fragment_player2_.xml
@@ -27,6 +27,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="10dp"
+                android:padding="2dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
@@ -35,6 +36,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="45dp"
+                android:padding="2dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
@@ -43,6 +45,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="80dp"
+                android:padding="2dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
@@ -51,6 +54,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="115dp"
+                android:padding="2dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
@@ -59,6 +63,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="150dp"
+                android:padding="2dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
@@ -67,6 +72,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="185dp"
+                android:padding="2dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
@@ -75,6 +81,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="220dp"
+                android:padding="2dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
@@ -83,6 +90,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="255dp"
+                android:padding="2dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
@@ -91,6 +99,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="290dp"
+                android:padding="2dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
@@ -99,6 +108,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="325dp"
+                android:padding="2dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
@@ -107,6 +117,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="360dp"
+                android:padding="2dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
@@ -115,6 +126,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="395dp"
+                android:padding="2dp"
                 android:src="@drawable/card_back" />
 
             <ImageView
@@ -123,6 +135,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="430dp"
+                android:padding="2dp"
                 android:src="@drawable/card_back" />
         </FrameLayout>
 
